--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,6 @@ scikit-image
 vizdoom
 crcmod
 cloudpickle==1.3.0
+git+https://github.com/Neo-X/rlkit/tree/surprise.git
+git+https://github.com/Neo-X/doodad.git
+
