--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 
 # rlkit
-gym
+gym==0.10.5
 gym[atari]
-atari_py
-gym_minigrid
-matplotlib
+atari_py==0.2.6
+gym_minigrid==1.0.1
+matplotlib==3.0.3
 # torch
-scikit-image
-vizdoom
-crcmod
+scikit-image==0.15.0
+vizdoom==1.1.7
+crcmod==1.7
 cloudpickle==1.3.0
-git+https://github.com/Neo-X/rlkit/tree/surprise.git
+git+https://github.com/Neo-X/rlkit.git@surprise
 git+https://github.com/Neo-X/doodad.git
 
