--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,4 @@ vizdoom==1.1.7
 crcmod==1.7
 cloudpickle==1.3.0
 git+https://github.com/Neo-X/rlkit.git@surprise
-git+https://github.com/Neo-X/doodad.git@surprise
-
+git+https://github.com/montrealrobotics/doodad.git@surprise
